--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,9 @@
     "inngest": "^3.44.3",
     "mongoose": "^8.19.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^19.2.0",
+    "svix": "^1.81.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
