Se adiciona la función para mandar correos de confirmación por reserva e instalación del paquete nodemailer para realizar el envío de correos dentro del entorno de node

--- a/server/package.json
+++ b/server/package.json
@@ -24,11 +24,14 @@
     "@clerk/backend": "^2.19.1",
     "@clerk/express": "^1.7.41",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cli": "^11.0.10",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.1",
     "axios": "^1.12.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -37,9 +40,7 @@
     "dotenv": "^17.2.3",
     "inngest": "^3.44.3",
     "mongoose": "^8.19.1",
-    "@nestjs/cli": "^11.0.10",
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
+    "nodemailer": "^7.0.10",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^19.2.0",
